--- a/Portafolio-Grupal-Vuejs/index.html
+++ b/Portafolio-Grupal-Vuejs/index.html
@@ -2,9 +2,9 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="./public/favicon.ico.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>CodeTitans-Portfolio</title>
   </head>
   <body>
     <div id="app"></div>
